--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html> 
+<html lang="en">
+    <!-- DEfines languages of content : English -->
+    <head>
+    <!-- Information about website and creator -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Defines the compatibility of version with browser -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <!-- Main content of website -->
+    <h1>GeeksforGeeks</h1>
+<p>A computer science portal for geeks</p>
+</body>
+</html>
