Actualizando el header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <header>
+        <h1> Welcome to our virtual shop :) </h1>
+        <p>We hope you find here the right products!</p>
+    </header>
     <!-- Main content of website -->
     <h1>GeeksforGeeks</h1>
 <p>A computer science portal for geeks</p>
