create a footer in english

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <!-- Main content of website -->
     <h1>GeeksforGeeks</h1>
 <p>A computer science portal for geeks</p>
+<footer>JAVDevs team</footer>
 </body>
 </html>
