--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html> 
 <html lang="en">
     <!-- DEfines languages of content : English -->
-    <head>
-    <!-- Information about website and creator -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Defines the compatibility of version with browser -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <!-- Main content of website -->
-    <h1>GeeksforGeeks</h1>
-<p>A computer science portal for geeks</p>
-</body>
+        <head>
+        <!-- Information about website and creator -->
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- Defines the compatibility of version with browser -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <!-- Main content of website -->
+        <h1>GeeksforGeeks</h1>
+        <p>A computer science portal for geeks</p>
+        <p>Approve Software Development 2 with our tutorials:</p>
+        <p><a href="https://www.geeksforgeeks.org/javascript/?ref=ghm">JavaScript Tutorial</a></p>
+        <p><a href="https://www.geeksforgeeks.org/nodejs/?ref=ghm">NodeJS Tutorial</a></p>
+
+    </body>
 </html>
