gallery section created

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <p>Approve Software Development 2 with our tutorials:</p>
         <p><a href="https://www.geeksforgeeks.org/javascript/?ref=ghm">JavaScript Tutorial</a></p>
         <p><a href="https://www.geeksforgeeks.org/nodejs/?ref=ghm">NodeJS Tutorial</a></p>
-
+    
+        <section>
+            <h2>Gallery</h2>
+            <p>This will be a gallery with amazing pics!</p>
+        </section>
     </body>
 </html>
